<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="@color/purple_200">

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/purple_700"
        android:fontFamily="monospace"
        android:text="@string/get_random_activity"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <CheckBox
                android:id="@+id/chbBusywork"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_busywork"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <CheckBox
                android:id="@+id/chbCharity"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_charity"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <CheckBox
                android:id="@+id/chbCooking"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_cooking"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <CheckBox
                android:id="@+id/chbDiy"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_diy"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <CheckBox
                android:id="@+id/chbEducation"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_education"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <CheckBox
                android:id="@+id/chbMusic"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_music"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <CheckBox
                android:id="@+id/chbRecreational"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_recreational"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <CheckBox
                android:id="@+id/chbRelaxation"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_relaxation"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <CheckBox
                android:id="@+id/chbSocial"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_social"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvLabelActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/activity"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/tvMembers"
            app:layout_constraintTop_toTopOf="@+id/tvLabelActivity"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvLabelType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabelType"
            app:layout_constraintStart_toStartOf="@+id/tvMembers"
            app:layout_constraintTop_toTopOf="@+id/tvLabelType" />

        <TextView
            android:id="@+id/tvLabelMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:text="@string/members"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvType" />

        <TextView
            android:id="@+id/tvMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabelMembers"
            app:layout_constraintStart_toEndOf="@+id/tvLabelMembers"
            app:layout_constraintTop_toTopOf="@+id/tvLabelMembers" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

